# exotica

./: .gitmodules  .travis.yml
.ci/: before_install.sh
exotica/: CMakeLists.txt
exotica_python/: CMakeLists.txt
pybind11/: CMakeLists.txt
pybind11_catkin/: CMakeLists.txt  package.xml
