<?xml version="1.0"?>
<package format="2">
  <name>pybind11_catkin</name>
  <version>2.1.1</version>
  <description>Catkin wrapper for pybind11</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>python</depend>
  <depend>python-numpy</depend>
  <depend>eigen</depend>

</package>
